[package]
name = "oryx"
version = "0.1.0"
authors = ["cy6erlion <dev@merely.tech>"]
edition = "2018"
description = "A time tracker."
homepage = "https://github.com/cy6erlion/oryx"
documentation = "https://github.com/cy6erlion/oryx"
repository = "https://github.com/cy6erlion/oryx"
readme = "README.md"
keywords = ["cli", "time-management", "time", "alarm", "tracker"]
categories = ["command-line-utilities"]

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
time = { version = "0.2", default-features = true }
indicatif = "0.15.0"
simpler_timer = "0.2.0"
notify-rust = "4"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
pager = "0.15.0"
ansi_term = "0.12"